@@ -1,3 +1,7 @@
+2010-10-15  Pierre Muller  <muller@ics.u-strasbg.fr>
+
+	* p-lang.c (is_pascal_string_type): Use TYPE_FIELD_NAME accessor.
+
 2010-10-14  Sami Wagiaalla  <swagiaal@redhat.com>
 
 	* gdbtypes.h: Create BASE_PTR_CONVERSION_BADNESS.
